# document-sync-job

./: .aicoe-ci.yaml  .env.template  .pre-commit-config.yaml  CHANGELOG.md  OWNERS  Pipfile  README.rst  app.py  pyproject.toml
thoth/document_sync/: app.py  lazy_set_ops.py
